# rsh

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  rsh
include/: common.h
include/builtins/: cd.h  clear.h  exit.h  path.h
include/exec/: builtin.h  execute_commands_with_arg.h  not_builtin.h  utils.h
include/input/: handle_batch_mode.h  handle_interactive_mode.h  prompt.h  read_input_line.h
include/parse/: split_lines_to_args.h
include/utils/: free_resource.h  some_common_utils.h
src/: common.h  main.c
src/builtins/: cd.c  clear.c  exit.c  path.c
src/exec/: builtin.c  execute_commands_with_arg.c  not_builtin.c  utils.c
src/input/: handle_batch_mode.c  handle_interactive_mode.c  prompt.h  read_input_line.c
src/parse/: split_lines_to_args.c
src/utils/: free_resource.c  some_common_utils.c
